Canary/Custom.css
/* ... */
/*
	Styles
*/
#-webkit-web-inspector,
#-webkit-web-inspector .split-view-contents {
	background-color: #242424;
}

#-webkit-web-inspector #toolbar {
	background: -webkit-linear-gradient(#505050,#383838) !important;
	border-top: 1px solid #222 !important;
	border-bottom: 1px solid #222 !important;
	box-shadow: inset 0 1px 0 #6E6E6E, 0 2px 2px rgba(0, 0, 0, 0.4), 0 -2px 2px rgba(0, 0, 0, 0.4) !important;
	height: auto !important;
}

#-webkit-web-inspector .toolbar-label {
	color: #999 !important;
	position: relative !important;
	top: 0 !important;
}

#-webkit-web-inspector #toolbar > button {
	box-shadow: none !important;
	border: 0 none !important;
	line-height: 22px !important;
	padding: 4px 14px 6px !important;
	cursor: pointer !important;
}

#-webkit-web-inspector .toolbar-item.toggleable.toggled-on {
	background-color: rgba(0,0,0,0.4) !important;
}

#-webkit-web-inspector button:hover {
	background-color: none !important;
}

#-webkit-web-inspector button.status-bar-item.toggled-on .glyph {
	top: -1px !important;
	background-color: #F9275D !important;
}

#-webkit-web-inspector #toolbar > button:hover .toolbar-label,
#-webkit-web-inspector .toolbar-item.toggleable.toggled-on .toolbar-label {
	color: #f8f8f8 !important;
}

#-webkit-web-inspector #toolbar div:first-child {
	display: none !important;
}

#-webkit-web-inspector #toolbar > div:first-child {
	display: block !important;
}

#-webkit-web-inspector #main {
	top: 34px !important;
}

#-webkit-web-inspector .split-view-sidebar-right .pane .sidebar-separator {
	background-image: -webkit-linear-gradient(#505050,#383838) !important;
	padding: 2px 5px !important;
	border-top: 1px solid #636363 !important;
	border-bottom: 1px solid black !important;
	color: #eee !important;
	text-shadow: #222 0 1px 0 !important;
	white-space: nowrap !important;
	text-overflow: ellipsis !important;
	overflow: hidden !important;
	font-size: 11px !important;
}

#-webkit-web-inspector .toolbar-item {
	height: 37px !important;
}

#-webkit-web-inspector .close-left {
	margin: 10px 0 0 0 !important;
}

/* Panes */
#-webkit-web-inspector #main ol {
	background-color: #111 !important;
}

#-webkit-web-inspector .webkit-css-property,
#-webkit-web-inspector .value {
	background-color: inherit !important;
}

#-webkit-web-inspector div.pane.expanded {
	background-color: #111;
}

#-webkit-web-inspector .styles-section.read-only {
	background-color: #222 !important;
}

#-webkit-web-inspector .styles-section {
	padding: 4px 0 !important;
}

#-webkit-web-inspector .styles-section .header .subtitle {
	color: #666 !important;
}

#-webkit-web-inspector .section .properties .dimmed {
	opacity: 0.8 !important;
}

#-webkit-web-inspector .suggest-box {
	color: #333 !important;
	background-color: #efefef !important;
}

#-webkit-web-inspector .suggest-box-content-item.source-code {
	color: #999 !important;
}

#-webkit-web-inspector .suggest-box-content-item.source-code.selected {
	color: #FFF !important;
	background-color: #242424 !important;
}

#-webkit-web-inspector .styles-section .properties > li .webkit-css-property {
	color: #72d9e7 !important;
	font-weight: normal;
}

#-webkit-web-inspector .styles-element-state-pane.expanded {
	border-bottom: 1px solid #555 !important;
}

#-webkit-web-inspector .styles-element-state-pane {
	background: #333 !important;
}

#-webkit-web-inspector .styles-section .value {
	color: #a775ff !important;
}

#-webkit-web-inspector .sidebar-separator {
	background-image: -webkit-gradient(linear, left top, left bottom, from(#666), color-stop(0.05, #666), color-stop(0.05, #333), to(#444)) !important;
	color: #CCC !important;
	text-shadow: none !important;
	border-top: 1px solid #333 !important;
	border-bottom: 1px solid #333 !important;
}

#-webkit-web-inspector .pane > .title {
	background-image: -webkit-gradient(linear, left top, left bottom, from(#666), to(#444)) !important;
	color: #bbb !important;
	text-shadow: 0 1px 0 black !important;
	border-top: 1px solid #333 !important;
	border-bottom: 1px solid #333 !important;
}

#-webkit-web-inspector .split-view-sidebar-right {
	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(90%,#333333), color-stop(100%,#252525)) !important;
}

#-webkit-web-inspector #error-warning-count {
	color: #CCC !important;
}

#-webkit-web-inspector #main-status-bar {
	border-top: 1px solid #333 !important;
}

#-webkit-web-inspector .monospace,
#-webkit-web-inspector .source-code {
	color: #CCC !important;
	font-size: 12px !important;
}

#-webkit-web-inspector .pane .monospace,
#-webkit-web-inspector .pane .source-code {
	color: #CCC !important;
}

#-webkit-web-inspector select.status-bar-item,
#-webkit-web-inspector select.status-bar-item:hover,
#-webkit-web-inspector .scope-bar li {
	color: #AAA !important;
	text-shadow: none !important;
}

#-webkit-web-inspector .scope-bar li.selected {
	color: white !important;
}

#-webkit-web-inspector select.status-bar-item,
#-webkit-web-inspector select.status-bar-item:hover {
	border-left: 1px solid #333 !important;
	border-right: 1px solid #AAA !important;
}

#-webkit-web-inspector .split-view-sidebar-right {
	border-left: 1px solid #3A3A3A !important;
	-webkit-box-shadow: none !important;
}

#-webkit-web-inspector .selector-matches {
	color: #a6e70a !important;
}
/* Resources Tab */
#-webkit-web-inspector .sidebar-tree,
#-webkit-web-inspector .resources.panel .base-storage-tree-element-title,
#-webkit-web-inspector .resources.panel .base-storage-tree-element-subtitle,
#-webkit-web-inspector .base-navigator-tree-element-title {
	color: #999 !important;
}

#-webkit-web-inspector .selected .sidebar-tree,
#-webkit-web-inspector .resources.panel .selected .base-storage-tree-element-title,
#-webkit-web-inspector .resources.panel .selected .base-storage-tree-element-subtitle,
#-webkit-web-inspector .selected .base-navigator-tree-element-title {
	color: #fff !important;
}

#-webkit-web-inspector .resources.panel .sidebar {
	background-color: #242424 !important;
}
/* ... */

